feat: links vm and fm legs allows the no-guidance transitions to link to the next part of the sid (#267)